CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__library_rust.snap
---
source: tests/snapshot_tests.rs
expression: sorted
---
- Cargo.toml
- README.md
- src/lib.rs
- src/task_lib.rs
- tests/integration_test.rs
