CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__rust_graphql_minimal.snap
---
source: crates/k1s0-cli/tests/snapshot_tests.rs
expression: sorted
---
- Cargo.toml
- Dockerfile
- README.md
- config/config.dev.yaml
- config/config.prod.yaml
- config/config.staging.yaml
- config/config.yaml
- src/adapter/handler/graphql.rs
- src/adapter/handler/mod.rs
- src/adapter/mod.rs
- src/domain/mod.rs
- src/domain/model.rs
- src/domain/repository.rs
- src/infra/config.rs
- src/infra/mod.rs
- src/main.rs
- src/usecase/mod.rs
- src/usecase/service.rs
- tests/integration_test.rs
