CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__service_mesh_service_rest.snap
---
source: crates/k1s0-cli/tests/snapshot_tests.rs
expression: sorted
---
- authorization-policy.yaml
- destination-rule.yaml
- network-policy.yaml
- peer-authentication.yaml
- virtual-service.yaml
