CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__service_mesh_system_grpc.snap
---
source: tests/snapshot_tests.rs
assertion_line: 918
expression: sorted
---
- authorization-policy.yaml
- destination-rule.yaml
- peer-authentication.yaml
- virtual-service.yaml
