CLI/crates/k1s0-cli/tests/snapshots/snapshot_tests__terraform_minimal.snap
---
source: tests/snapshot_tests.rs
assertion_line: 715
expression: sorted
---
- backend.tf
- main.tf
- outputs.tf
- terraform.tfvars
- variables.tf
